k8s/apps/elastic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: elasticsearch-main
spec:
  rules:
    - host: elasticsearch.home-server.antoine-campbell.com
      http:
        paths:
          - backend:
              service:
                name: main-es-default
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: home-server-wildcard-signed-prod
